# liu-bbs

./: .gitattributes  Cargo.toml  README.md  build.rs  config.toml  openapi.yml  redocly.yaml
.github/workflows/: main.yml
public/openapi/: auth.yml  openapi.yml  session.yml  topic.yml  user.yml
public/openapi/components/: parameters.yml  responses.yml  schemas.yml
public/openapi_doc/: index.html
public/swagger-ui/: swagger-initializer.js
src/: cli.rs  common.rs  data.rs  http.rs  lib.rs  main.rs  migrations.rs  models.rs  routes.rs  rt.rs  services.rs
src/cli/: app.rs  commands.rs  hello_command.rs  migrate_command.rs  server_command.rs
src/common/: api_error.rs  api_request.rs  app_config.rs  app_config_error.rs  collection_name.rs  counter_key.rs  database_config.rs  database_data.rs  database_error.rs  launch_error.rs  migration.rs  migration_error.rs  migration_log.rs  response_result.rs  rocket_ext.rs  serde_helpers.rs  server_config.rs  version_info.rs
src/common/serde_helpers/: bson_hash_map.rs  bson_option_system_time.rs  bson_system_time.rs  json_system_time.rs
src/data/: counter_repository.rs  demo_repository.rs  forum_repository.rs  forum_tree_repository.rs  migrator_repository.rs  provider.rs  session_repository.rs  topic_content_repository.rs  topic_repository.rs  user_repository.rs
src/http/: controllers.rs  requests.rs  responses.rs
src/http/controllers/: api.rs  error_demo.rs  hello.rs  hello_ns.rs  openapi.rs
src/http/controllers/api/: auth.rs  captcha.rs  session.rs  topic.rs  user.rs
src/http/controllers/api/auth/: login_ns.rs  register_ns.rs
src/http/controllers/api/topic/: index_ns.rs  post_topic_ns.rs  store_ns.rs  topic_show.rs  topic_store.rs
src/http/controllers/api/user/: info_ns.rs
src/http/requests/: auth_session_request.rs  filter_topic_list_request.rs  login_request.rs  register_request.rs  save_topic_request.rs  session_request.rs
src/http/responses/: captcha_response.rs  common_node_response.rs  forum_info_response.rs  init_session_response.rs  login_response.rs  topic_info_response.rs  topic_list_response.rs  user_info_self_response.rs
src/migrations/: m2022_08_19_000000_create_counters_collection.rs  m2022_09_06_000000_create_users_collection.rs  m2022_09_06_135500_create_user_emails_collection.rs  m2022_09_06_230900_create_sessions_collection.rs  m2022_09_15_163700_create_forum_groups_collection.rs  m2022_09_15_164800_create_forums_collection.rs  m2022_09_16_170200_create_forum_trees_collection.rs  m2022_09_16_173100_create_default_forums.rs  m2022_09_18_161500_create_topics_collection.rs  m2022_09_18_161700_create_topic_contents_collection.rs  m2022_09_18_164400_create_topic_replies_collection.rs
src/models/: counter.rs  forum.rs  forum_group.rs  forum_tree.rs  session.rs  topic.rs  topic_content.rs  topic_reply.rs  user.rs  user_email.rs
src/routes/: api.rs  common.rs
src/services/: captcha_service.rs  demo_service.rs  forum_service.rs  migrator_service.rs  provider.rs  session_service.rs  topic_service.rs  user_service.rs
tests/: app_test_main.rs
