[package]
name = "liu-bbs"
description = "a bbs application api server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
os_info = { version = "3", default-features = false }

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
actix-web = { version = "4", default-features = false, features = ["macros"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
os_info = { version = "3", default-features = false }
futures = { version = "0.3", default-features = false }
rand = "0.8"
sha1 = "0.10.4"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
toml = "0.5"
mongodb = "2.3.0"
thiserror = "1.0"
async-trait = "0.1"
captcha-a = "0.1.4"
regex = "1.6"
chrono = "0.4"

[dependencies.tokio]
version = "1.20.1"
features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal"]